discussion/kv_engine/174237/174237_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove 'force' arg from CM::checkOpenCheckpoint()

Replaced by a direct call to addNewCheckpoint().

Change-Id: I114e2d64a49fc00135b98efa1fd9f5f88a91b5ef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-27 08:59:03.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 09:32:14.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17037/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17037/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17037/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6793/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6700/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17969/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17969/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19871/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19871/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19173/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19173/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18829/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18829/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27246/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27246/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45702/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16005/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
